--- a/Programmieren/index.html
+++ b/Programmieren/index.html
@@ -47,10 +47,10 @@
             <a href="media.html"> <h2 class="Media"> Media </h2> </a>
         </div>
         <div class="c5">
-            <a href"Radio/index.html"> <h2 class="Radio"> Listen to Radiostations in different Languages </h2> </a>
+            <a href="Radio/index.html"> <h2 class="Radio"> Listen to Radiostations in different Languages </h2> </a>
         </div>
         <div class="c5">
-            <a href"../index.html"> <h2 class="Aphmau">Go To last Page </h2> </a>
+            <a href="../index.html"> <h2 class="Aphmau">Go To last Page </h2> </a>
         </div>
          <div class="c5">
              <a href="Radio/Install/index.html"> <h2 class="Apps">Install this Website as an App </h2> </a>
