--- a/Programmieren/Radio/Install/Apps/index.html
+++ b/Programmieren/Radio/Install/Apps/index.html
@@ -46,28 +46,28 @@
         </div>
      <div class="r3">
         <div class="c6">
-            <h2 class="Android"> Android </h2>
+            <a href="Android.html"> <h2 class="Android"> Android </h2> </a>
         </div>
         <div class="c6">
-            <h2 class="Windows"> Windows </h2>
+            <a href="Windows.html"> <h2 class="Windows"> Windows </h2> </a>
         </div>
         <div class="c6">
-            <h2 class="Mac"> MacOS </h2>
+            <a href="MacOS.html"> <h2 class="Mac"> MacOS </h2> </a>
         </div>
         <div class="c6">
-            <h2 class="Linux"> Linux </h2>
+            <a href="Linux.html"> <h2 class="Linux"> Linux </h2> </a>
         </div>
         <div class="c6">
-            <h2 class="Aphmau"> Return to First Page </h2>
+            <a href="../../../../index.html"> <h2 class="Aphmau"> Return to First Page </h2> </a>
         </div>
         <div class="c6">
-            <h2 class="Programmieren"> Return to Second Page </h2>
+            <a href="../../../index.html"> <h2 class="Programmieren"> Return to Second Page </h2> </a>
         </div>
         <div class="c6">
-            <h2 class="Radio"> Return to Third Page </h2>
+            <a href="../../index.html"> <h2 class="Radio"> Return to Third Page </h2> </a>
         </div>
         <div class="c6">
-            <a class="Apps"> Return to last Page </a>
+            <a href="../index.html"> <h2 class="Apps"> Return to last Page </h2> </a>
         </div>
     </div>
 </body>
