--- a/Programmieren/Radio/Install/index.html
+++ b/Programmieren/Radio/Install/index.html
@@ -38,19 +38,19 @@
     </div>
     <div class="r3">
         <div class="c5">
-            <h2 class="Windows"> Windows </h2>
+            <a href="Windows.html"> <h2 class="Windows"> Windows </h2> </a>
         </div>
         <div class="c5">
-            <h2 class="Aphmau"> Return to First Page </h2>
+            <a href="../../../index.html"> <h2 class="Aphmau"> Return to First Page </h2> </a>
         </div>
         <div class="c5">
-            <h2 class="Programmieren"> Return to Second Page </h2>
+            <a href="../../index.html"> <h2 class="Programmieren"> Return to Second Page </h2> </a>
         </div>
         <div class="c5">
-            <h2 class="Radio"> Return to last Page </h2>
+            <a href="../index.html"> <h2 class="Radio"> Return to last Page </h2> </a>
         </div>
         <div class="c5">
-            <h2 class="Install"> Install other Apps </h2>
+            <a href="Apps/index.html"> <h2 class="Install"> Install other Apps </h2> </a>
         </div>
     </div>
 </body>
