--- a/Programmieren/Radio/index.html
+++ b/Programmieren/Radio/index.html
@@ -44,25 +44,25 @@
     </div>
      <div class="r3">
         <div class="c6">
-            <h2 class="Schweiz"> Swiss Radiostations </h2>
+            <a href="Schweiz.html"> <h2 class="Schweiz"> Swiss Radiostations </h2> </a>
         </div>
         <div class="c6">
-            <h2 class="Deutschland"> German Radiostations </h2>
+            <a href="Deutschland.html"> <h2 class="Deutschland"> German Radiostations </h2> </a>
         </div>
         <div class="c6">
-            <h2 class="Romania"> Romanian Radiostations </h2>
+            <a href="Romania.html"> <h2 class="Romania"> Romanian Radiostations </h2> </a>
         </div>
         <div class="c6">
-            <h2 class="Aphmau"> Return to First Page </h2>
+            <a href="../../index.html"> <h2 class="Aphmau"> Return to First Page </h2> </a>
         </div>
         <div class="c6">
-            <h2 class="Programmieren"> Return to last Page </h2>
+            <a href="../index.html"> <h2 class="Programmieren"> Return to last Page </h2> </a>
         </div>
         <div class="c6">
-            <a class="Apps"> Install this Website as an App </a>
+            <a href="Install/index.html"> <h2 class="Apps"> Install this Website as an App </h2> </a>
         </div>
         <div class="c6">
-            <a class="Install"> Install other Apps </a>
+            <a href="Install/Apps/index.html"> <h2 class="Install"> Install other Apps </h2> </a>
         </div>
     </div>
 </body>
