--- a/Programmieren/Radio/Install/Apps/Google.html
+++ b/Programmieren/Radio/Install/Apps/Google.html
@@ -21,14 +21,14 @@
         <a class="Maps" href="Maps.html"> Maps </a>
         <a class="Slides" href="Slides.html"> Slides </a>
         <a class="News" href="News.html"> News </a>
-        <a class="Play.Books" href="Play.Books.html"> Play Books </a>
+        <a class="Play_Books" href="Play.Books.html"> Play Books </a>
         <a class="Gemini" href="Gemini.html"> Gemini </a>
-        <a class="Play.Games" href="Play.Games.html"> Play Games </a>
+        <a class="PlayG_ames" href="Play.Games.html"> Play Games </a>
         <a class="Calendar" href="Calendar.html"> Calendar </a>
         <a class="Drive" href="Drive.html"> Drive </a>
         <a class="Keep" href="Keep.html"> Keep </a>
         <a class="Docs" href="Docs.html"> Docs </a>
-        <a class="YouTube.Music" href="YouTube.Music.html"> YouTube Music </a>
+        <a class="YouTube_Music" href="YouTube.Music.html"> YouTube Music </a>
         <a class="YouTube" href="YouTube.html"> YouTube </a>
     </div>
 </body>
