Added ADS and Updated all index.html and index.css

--- a/ADS/index.html
+++ b/ADS/index.html
@@ -1,5 +1,5 @@
 <head>
-    <link rel="stylesheet" href="index.Background.css">
+    <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="All.Pages.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -17,20 +17,22 @@
 </head>
 <body>
     <div class="r6">
-        <u> <h1 class="Titel";> All about Aphmau </h1> </u>   
+        <u> <h1 class="Titel";> If you want that you're Advertising is on this Website then just write me an E-Mail </h1> </u>   
     </div>
     <div class="r6">
         <div class="c6">
-            <a href="infos.html"> <img src="https://xforgeassets001.xboxlive.com/pf-namespace-b63a0803d3653643/634ced57-da80-4cfd-a7b2-2523af5d6467/cc_Thumbnail_0.jpg"> </a>
+            <address>
+                Written by <a href="mailto:freetimemaker123321@gmail.com">Freetime Maker</a>.<br>
+                Visit us at:<br>
+                <a href="https://freetimemaker.github.io"> <h2 class="Websites">freetimemaker.github.io </h2> </a> <br>
+                <a href="https://sites.google.com/s-stb.ch/alles-ueber-die-tiere"> <h2 class="Websites1">Alles über die Tiere </h2> </a> <br>
+                <a href="https://sites.google.com/s-stb.ch/all-about-the-animals"> <h2 class="Websites2">All about the Animals </h2> </a> <br>
+                <a href="https://sites.google.com/s-stb.ch/freetime-maker-hauptwebsite"> <h2 class="Websites3">Freetime Maker Hauptwebsite </h2> </a> <br>
+                <a href="https://sites.google.com/s-stb.ch/freetime-maker-main-website"> <h2 class="Websites4">Freetime Maker Main Website </h2> </a>
+                </address>
         </div>
         <div class="c6">
-            <a href="quiz.html"> <img src="https://th.bing.com/th/id/OIP.kGBTD5PU8HDKLszbFR5MXgHaFe?rs=1&pid=ImgDetMain"> </a>
-        </div>
-        <div class="c6">
-            <a href="media.html"> <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTM__w94JbnKFUs43GTDCduID-RJODnqeHCEA&s"> </a>
-        </div>
-        <div class="c6">
-            <a href="ADS/index.html"> <img src="https://th.bing.com/th/id/R.ff7ed568b9a33cdfc7602bcc6f849015?rik=Cw5TGQrSNiDGnQ&riu=http%3a%2f%2fwebneel.com%2fdaily%2fsites%2fdefault%2ffiles%2fimages%2fdaily%2f07-2014%2f5-best-ads-agasalho-hamburguer.jpg&ehk=QjuipE79CuTHajhNguWHJmodwSt5qf%2fQjToS7CYhhzA%3d&risl=&pid=ImgRaw&r=0"> </a>
+            <a href="../index.html"> <img src="https://s2.dmcdn.net/v/UT4d81ZeDAbd70Tn7/x720"> </a>
         </div>
         <div class="c6">
             <a href="Programmieren/index.html"> <img src="https://th.bing.com/th/id/R.ed2d29e1730fc38d4fcaa9060bc98d7e?rik=pUKteMVVcFxZjA&pid=ImgRaw&r=0"> </a>
@@ -47,16 +49,7 @@
     </div>
      <div class="r6">
         <div class="c6">
-            <a href="infos.html"> <h2 class="Info"> Info </h2> </a>
-        </div>
-        <div class="c6">
-            <a href="quiz html"> <h2 class="Quiz"> Quiz </h2> </a>
-        </div>
-        <div class="c6">
-            <a href="media.html"> <h2 class="Media"> Media </h2> </a>
-        </div>
-        <div class="c6">
-            <a href="ADS/index.html"> <h2 class="ADS">Advertising </h2> </a>
+            <a href="../index.html"> <h2 class="Aphmau"> Aphmau </h2> </a>
         </div>
         <div class="c6">
             <a href="Programmieren/index.html"> <h2 class="Programmieren"> Programming </h2> </a>
