Updated Google.html and ADS

--- a/Programmieren/Radio/Install/Apps/Google.html
+++ b/Programmieren/Radio/Install/Apps/Google.html
@@ -23,7 +23,7 @@
         <a class="News" href="News.html"> News </a>
         <a class="Play_Books" href="Play.Books.html"> Play Books </a>
         <a class="Gemini" href="Gemini.html"> Gemini </a>
-        <a class="PlayG_ames" href="Play.Games.html"> Play Games </a>
+        <a class="Play_Games" href="Play.Games.html"> Play Games </a>
         <a class="Calendar" href="Calendar.html"> Calendar </a>
         <a class="Drive" href="Drive.html"> Drive </a>
         <a class="Keep" href="Keep.html"> Keep </a>
