Added a few Things and Updated a few Things

--- a/Programmieren/Radio/Install/Apps/Android.Apps.html
+++ b/Programmieren/Radio/Install/Apps/Android.Apps.html
@@ -32,5 +32,6 @@
         <a class="Github" href="Github.html"> Github </a>
         <a class="TikTok" href="TikTokApps.html"> TikTok Apps </a>
         <a class="Twitch" href="Twitch.html"> Twitch </a>
+        <a class="FM" href="FM.html"> Freetime Maker Apps </a>
     </div>
 </body>
