--- a/Programmieren/Radio/Install/Apps/X.html
+++ b/Programmieren/Radio/Install/Apps/X.html
@@ -20,4 +20,5 @@
         <a class="Home" href="Android.Apps.html"> Home </a>
     </div>
     <a  class="APK" href="uptodown-com.twitter.android.apk" download="X/Twitter.apk"> <h2 class="Download">Download X/Twitter </h2> </a>
+    <a class="Official" href="https://play.google.com/store/apps/details?id=com.twitter.android"> <h2 class="Official">Download it from the Play Store </h2> </a>
 </body>
