--- a/Programmieren/Radio/Install/Apps/Maps.html
+++ b/Programmieren/Radio/Install/Apps/Maps.html
@@ -41,4 +41,5 @@
             });
         }
     </script>
+    <a class="Official" href="https://play.google.com/store/apps/details?id=com.google.android.apps.maps"> <h2 class="Official">Download it from the Play Store </h2> </a>
 </body>
