--- a/Programmieren/Radio/Install/Apps/Slides.html
+++ b/Programmieren/Radio/Install/Apps/Slides.html
@@ -42,4 +42,5 @@
             });
         }
     </script>
+    <a class="Official" href="https://play.google.com/store/apps/details?id=com.google.android.apps.docs.editors.slides"> <h2 class="Official">Download it from the Play Store </h2> </a>
 </body>
