--- a/Programmieren/Radio/Install/Apps/Snapchat.html
+++ b/Programmieren/Radio/Install/Apps/Snapchat.html
@@ -42,4 +42,5 @@
             });
         }
     </script>
+    <a class="Official" href="https://play.google.com/store/apps/details?id=com.snapchat.android"> <h2 class="Official">Download it from the Play Store </h2> </a>
 </body>
