--- a/Programmieren/Radio/Install/Apps/Tycoon.html
+++ b/Programmieren/Radio/Install/Apps/Tycoon.html
@@ -20,5 +20,5 @@
         <a class="Home" href="Android.Spiele.html"> Home </a>
     </div>
     <a  class="APK" href="uptodown-com.fluffyfairygames.idleminertycoon.apk" download="Idle Miner Tycoon.apk"> <h2 class="Download">Download Idle Miner Tycoon </h2> </a>
-    <a class="Official" href="https://play.google.com/store/apps/details?id=com.fluffyfairygames.idleminertycoon"> <h2>Download it from the Play Store </h2> </a>
+    <a class="Official" href="https://play.google.com/store/apps/details?id=com.fluffyfairygames.idleminertycoon"> <h2 class="Official">Download it from the Play Store </h2> </a>
 </body>
