--- a/Programmieren/Radio/Install/Apps/WhatsApp.html
+++ b/Programmieren/Radio/Install/Apps/WhatsApp.html
@@ -20,5 +20,5 @@
         <a class="Home" href="Android.Apps.html"> Home </a>
     </div>
     <a  class="APK" href="com.whatsapp_2.24.18.8-241808008_minAPI21(arm64-v8a)(nodpi)_apkmirror.com.apk" download="WhatsApp.apk"> <h2 class="Download">Download WhatsApp </h2> </a>
-    <a class="Official" href="https://play.google.com/store/apps/details?id=com.whatsapp"> <h2>Download it from the Play Store </h2> </a>
+    <a class="Official" href="https://play.google.com/store/apps/details?id=com.whatsapp"> <h2 class="Official">Download it from the Play Store </h2> </a>
 </body>
