--- a/Programmieren/Radio/Install/Apps/CPM.html
+++ b/Programmieren/Radio/Install/Apps/CPM.html
@@ -75,4 +75,5 @@
             });
         }
     </script>
+    <a class="Official" href="https://play.google.com/store/apps/details?id=com.olzhas.carparking.multyplayer"> <h2 class="Official">Download it from the Play Store </h2> </a>
 </body>
