--- a/Programmieren/Radio/Install/Apps/CPM2.html
+++ b/Programmieren/Radio/Install/Apps/CPM2.html
@@ -20,4 +20,5 @@
         <a class="Home" href="Android.Spiele.html"> Home </a>
     </div>
     <a  class="APK" href="uptodown-com.olzhas.carparking.multyplayer2.apk" download="CPM2.apk"> <h2 class="Download">Download Car Parking Multiplayer 2 </h2> </a>
+    <a class="Official" href="https://play.google.com/store/apps/details?id=com.olzhas.carparking.multyplayer2"> <h2 class="Official">Download it from the Play Store </h2> </a>
 </body>
