--- a/Programmieren/Radio/Install/Apps/ChatGPT.html
+++ b/Programmieren/Radio/Install/Apps/ChatGPT.html
@@ -20,4 +20,5 @@
         <a class="Home" href="Android.Apps.html"> Home </a>
     </div>
     <a  class="APK" href="uptodown-com.openai.chatgpt.apk" download="ChatGPT.apk"> <h2 class="Download">Download ChatGPT </h2> </a>
+    <a class="Official" href="https://play.google.com/store/apps/details?id=com.openai.chatgpt"> <h2 class="Official">Download it from the Play Store </h2> </a>
 </body>
