--- a/Programmieren/Radio/Install/Apps/Copilot.html
+++ b/Programmieren/Radio/Install/Apps/Copilot.html
@@ -20,4 +20,5 @@
         <a class="Home" href="Microsoft.html"> Home </a>
     </div>
     <a  class="APK" href="microsoft-copilot-28-6-420624005.apk" download="Copilot.apk"> <h2 class="Download">Download Microsoft Copilot </h2> </a>
+    <a class="Official" href="https://play.google.com/store/apps/details?id=com.microsoft.copilot"> <h2 class="Official">Download it from the Play Store </h2> </a>
 </body>
