--- a/Programmieren/Radio/Install/Apps/Designer.html
+++ b/Programmieren/Radio/Install/Apps/Designer.html
@@ -20,4 +20,5 @@
         <a class="Home" href="Microsoft.html"> Home </a>
     </div>
     <a  class="APK" href="microsoft-designer-1-2417404-8001.apk" download="Designer.apk"> <h2 class="Download">Download Microsoft Designer </h2> </a>
+    <a class="Official" href="https://play.google.com/store/apps/details?id=com.microsoft.designer"> <h2 class="Official">Download it from the Play Store </h2> </a>
 </body>
