--- a/Programmieren/Radio/Install/Apps/Docs.html
+++ b/Programmieren/Radio/Install/Apps/Docs.html
@@ -40,4 +40,5 @@
             });
         }
     </script>
+    <a class="Official" href="https://play.google.com/store/apps/details?id=com.google.android.apps.docs.editors.docs"> <h2 class="Official">Download it from the Play Store </h2> </a>
 </body>
