--- a/Programmieren/Radio/Install/Apps/Monopoly.html
+++ b/Programmieren/Radio/Install/Apps/Monopoly.html
@@ -20,4 +20,5 @@
         <a class="Home" href="Android.Spiele.html"> Home </a>
     </div>
     <a  class="APK" href="uptodown-com.scopely.monopolygo.apk" download="MonopolyGO.apk"> <h2 class="Download">Download MonopolyGO </h2> </a>
+    <a class="Official" href="https://play.google.com/store/apps/details?id=com.scopely.monopolygo"> <h2 class="Official">Download it from the Play Store </h2> </a>
 </body>
