Added Instagram and Updated Word

--- a/Programmieren/Radio/Install/Apps/Word.html
+++ b/Programmieren/Radio/Install/Apps/Word.html
@@ -19,7 +19,7 @@
     <div class="nav">
         <a class="Home" href="Microsoft.html"> Home </a>
     </div>
-    <a class="ZIP" href="#" onclick="downloadFiles()">Install Snapchat and the additional Files.</a>
+    <a class="ZIP" href="#" onclick="downloadFiles()">Install Microsoft Word and the additional Files.</a>
 
     <script>
         function downloadFiles() {
