--- a/Programmieren/Radio/Install/Apps/Spotify.html
+++ b/Programmieren/Radio/Install/Apps/Spotify.html
@@ -1,5 +1,5 @@
 <head>
-    <link rel="stylesheet" href="Android.Apps.css">
+    <link rel="stylesheet" href="Spotify.css">
     <link rel="stylesheet" href="All.Pages.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -17,21 +17,8 @@
 </head>
 <body>
     <div class="nav">
-        <a class="Home" href="Android.html"> Home </a>
-        <a class="ChatGPT" href="ChatGPT.html"> ChatGPT </a>
-        <a class="WhatsApp" href="WhatsApp.html"> WhatsApp </a>
-        <a class="Snapchat" href="Snapchat.html"> Snapchat </a>
-        <a class="X" href="X.html"> X </a>
-        <a class="Microsoft" href="Microsoft.html"> Microsoft Apps </a>
-        <a class="Google" href="Google.html"> Google Apps </a>
-        <a class="Netflix" href="Netflix.html"> Netflix </a>
-        <a class="Disney" href="Disney+.html"> Disney+ </a>
-        <a class="Spotify" href="Spotify.html"> Spotify </a>
-        <a class="Insta" href="Instagram.html"> Instagram </a>
-        <a class="Threads" href="Threads.html"> Threads </a>
-        <a class="Github" href="Github.html"> Github </a>
-        <a class="TikTok" href="TikTokApps.html"> TikTok Apps </a>
-        <a class="Twitch" href="Twitch.html"> Twitch </a>
-        <a class="FM" href="FM.html"> Freetime Maker Apps </a>
+        <a class="Home" href="Android.Apps.html"> Home </a>
     </div>
+    <a  class="APK" href="Spotify_ Music and Podcasts_8.9.68.456_APKPure.apk" download="Spotify.apk"> <h2 class="Download">Download Spotify </h2> </a>
+    <a class="Official" href="https://play.google.com/store/apps/details?id=com.spotify.music"> <h2 class="Official">Download it from the Play Store </h2> </a>
 </body>
