--- a/ADS/index.html
+++ b/ADS/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
     <div class="r6">
-        <u> <h1 class="Titel";> If you want that you're Advertising is on this Website then just write me an E-Mail </h1> </u>   
+        <u> <h2 class="Titel"> If you want that you're Advertising is on this Website then just write me an E-Mail </h2> </u>   
     </div>
     <div class="r6">
         <div class="c6">
