--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
     <div class="r6">
-        <u> <h1 class="Titel";> All about Aphmau </h1> </u>   
+        <u> <h1 class="Titel"> All about Aphmau </h1> </u>   
     </div>
     <div class="r6">
         <div class="c6">
