Added/Updated a Few Things

--- a/Programmieren/presentation.html
+++ b/Programmieren/presentation.html
@@ -5,6 +5,14 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playwrite+AT:ital,wght@0,100..400;1,100..400&display=swap" rel="stylesheet">
     <link rel="icon" type="image/x-icon" href="Radio/favicon.ico">
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-CVP9TTB6HR"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-CVP9TTB6HR');
+    </script>
 </head>
 <body>
     <div class="nav">
