--- a/ADS/index.html
+++ b/ADS/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
     <div class="r6">
-        <u> <h4 class="Titel"> If you want that you're Advertising is on this Website then just write me an E-Mail </h4> </u>   
+        <u> <h6 class="Titel"> If you want that you're Advertising is on this Website then just write me an E-Mail </h6> </u>   
     </div>
     <div class="r6">
         <div class="c6">
@@ -39,10 +39,10 @@
             <address>
                 Written by <a href="mailto:freetimemaker123321@gmail.com"> <h2 class="E-Mail">Freetime Maker </a> </h2> <br>
                 Visit us at:<br>
-                <a href="https://freetimemaker.github.io" target="_blank"> <h2 class="Websites">freetimemaker.github.io </h2> </a> <br>
-                <a href="https://sites.google.com/s-stb.ch/alles-ueber-die-tiere" target="_blank"> <h2 class="Websites1">Alles über die Tiere </h2> </a> <br>
-                <a href="https://sites.google.com/s-stb.ch/all-about-the-animals" target="_blank"> <h2 class="Websites2">All about the Animals </h2> </a> <br>
-                <a href="https://sites.google.com/s-stb.ch/freetime-maker-hauptwebsite" target="_blank"> <h2 class="Websites3">Freetime Maker Hauptwebsite </h2> </a> <br>
+                <a href="https://freetimemaker.github.io" target="_blank"> <h2 class="Websites">freetimemaker.github.io </h2> </a>
+                <a href="https://sites.google.com/s-stb.ch/alles-ueber-die-tiere" target="_blank"> <h2 class="Websites1">Alles über die Tiere </h2> </a>
+                <a href="https://sites.google.com/s-stb.ch/all-about-the-animals" target="_blank"> <h2 class="Websites2">All about the Animals </h2> </a>
+                <a href="https://sites.google.com/s-stb.ch/freetime-maker-hauptwebsite" target="_blank"> <h2 class="Websites3">Freetime Maker Hauptwebsite </h2> </a>
                 <a href="https://sites.google.com/s-stb.ch/freetime-maker-main-website" target="_blank"> <h2 class="Websites4">Freetime Maker Main Website </h2> </a>
             </address>
         </div>
