--- a/ADS/index.html
+++ b/ADS/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
     <div class="r6">
-        <u> <h6 class="Titel"> If you want that you're Advertising is on this Website then just write me an E-Mail </h6> </u>   
+        <u> <h6 class="Titel"> If you want you're Ad is on this Website just write an E-Mail </h6> </u>   
     </div>
     <div class="r6">
         <div class="c6">
