--- a/index.html
+++ b/index.html
@@ -78,5 +78,6 @@
         <div class="c6">
             <a href="Programmieren/Radio/Install/Apps/index.html"> <h2 class="Install"> Install other Apps </h2> </a>
         </div>
+  <script type="text/javascript" id="hs-script-loader" async defer src="//js-eu1.hs-scripts.com/145304281.js"></script>
     </div>
 </body>
