--- a/Programmieren/Radio/Schweiz.html
+++ b/Programmieren/Radio/Schweiz.html
@@ -37,5 +37,6 @@
         <a class="Basilisk" href="Basilisk.html">Basilisk </a>
         <a class="SRF" href="SRF.html">SRF Virus </a>
         <a class="SRF3" href="SRF3.html">SRF3 </a>
+        <a class="Rete" href="Rete Uno.html">Rete Uno </a>
     </div>
 </body>
