--- a/Programmieren/Radio/Rete Uno.html
+++ b/Programmieren/Radio/Rete Uno.html
@@ -1,5 +1,5 @@
 <head>
-    <link rel="stylesheet" href="Toggo.css">
+    <link rel="stylesheet" href="Rete Uno.css">
     <link rel="stylesheet" href="All.Pages.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
