--- a/Programmieren/index.html
+++ b/Programmieren/index.html
@@ -29,10 +29,10 @@
     </div>
     <div class="r5">
         <div class="c5">
-            <a href="presentation.html"> <img src="https://onedrive.live.com/embed?resid=FB2B769EC8CC7929%2170337&authkey=%21AP-a10iHXXkQmUk&width=200&height=200"> </a>
+            <a href="presentation.html"> <img src="https://static-cdn.jtvnw.net/jtv_user_pictures/f1e0e1be-82ee-4cc8-85db-570d1ec9347b-profile_image-150x150.png"> </a>
         </div>
         <div class="c5">
-            <a href="media.html"> <img src="https://onedrive.live.com/embed?resid=FB2B769EC8CC7929%2170337&authkey=%21AP-a10iHXXkQmUk&width=200&height=200"> </a>
+            <a href="media.html"> <img src="https://static-cdn.jtvnw.net/jtv_user_pictures/f1e0e1be-82ee-4cc8-85db-570d1ec9347b-profile_image-150x150.png"> </a>
         </div>
         <div class="c5">
             <a href="../ADS/index.html"> <img src="https://th.bing.com/th/id/R.ff7ed568b9a33cdfc7602bcc6f849015?rik=Cw5TGQrSNiDGnQ&riu=http%3a%2f%2fwebneel.com%2fdaily%2fsites%2fdefault%2ffiles%2fimages%2fdaily%2f07-2014%2f5-best-ads-agasalho-hamburguer.jpg&ehk=QjuipE79CuTHajhNguWHJmodwSt5qf%2fQjToS7CYhhzA%3d&risl=&pid=ImgRaw&r=0"> </a>
