--- a/Programmieren/Radio/Install/Apps/Minecraft/Bedrock.html
+++ b/Programmieren/Radio/Install/Apps/Minecraft/Bedrock.html
@@ -26,6 +26,7 @@
 <body>
     <div class="nav">
         <a class="Home" href="index.html"> Home </a>
+        <a class="Maps" href="MapsBedrock.html"> Maps </a>
         <a class="Other" href="OtherBedrock.html"> Other Files </a>
     </div>
 </body>
