--- a/Programmieren/Radio/Install/Android.html
+++ b/Programmieren/Radio/Install/Android.html
@@ -1,1 +1,36 @@
+<head>
+    <link rel="stylesheet" href="Windows.css">
+    <link rel="stylesheet" href="All.Pages.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Playwrite+AT:ital,wght@0,100..400;1,100..400&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400..700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/x-icon" href="../favicon.ico">
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-CVP9TTB6HR"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
 
+      gtag('config', 'G-CVP9TTB6HR');
+    </script>
+</head>
+<body>
+    <div class="nav">
+        <a class="Home" href="index.html"> Home </a>
+        <a class="Windows" href="windows.html"> Windows </a>
+        <a class="Android" href="Android.html"> Android </a>
+        <a class="Aphmau" href="../../../index.html"> Aphmau </a>
+        <a class="Programmieren" href="../../index.html"> Programming </a>
+        <a class="Radio" href="../index.html"> Radio </a>
+    </div>
+    <a  class="Windows.App" href="freetimemaker.github.io.apl" download="Android App.apk"> <h2>Download the Website as an Android App </h2> </a>
+</body>
