--- a/Programmieren/Radio/Install/Windows.html
+++ b/Programmieren/Radio/Install/Windows.html
@@ -26,7 +26,8 @@
 <body>
     <div class="nav">
         <a class="Home" href="index.html"> Home </a>
-        <a class="Windows" href="windows.html"> Windows </a>
+        <a class="Windows" href="Windows.html"> Windows </a>
+        <a class="Android" href="Android.html"> Android
         <a class="Aphmau" href="../../../index.html"> Aphmau </a>
         <a class="Programmieren" href="../../index.html"> Programming </a>
         <a class="Radio" href="../index.html"> Radio </a>
