--- a/Programmieren/Radio/Install/Android.html
+++ b/Programmieren/Radio/Install/Android.html
@@ -26,11 +26,8 @@
 <body>
     <div class="nav">
         <a class="Home" href="index.html"> Home </a>
-        <a class="Windows" href="windows.html"> Windows </a>
+        <a class="Windows" href="Windows.html"> Windows </a>
         <a class="Android" href="Android.html"> Android </a>
-        <a class="Aphmau" href="../../../index.html"> Aphmau </a>
-        <a class="Programmieren" href="../../index.html"> Programming </a>
-        <a class="Radio" href="../index.html"> Radio </a>
     </div>
-    <a  class="Windows.App" href="freetimemaker.github.io.apl" download="Android App.apk"> <h2>Download the Website as an Android App </h2> </a>
+    <a  class="Windows.App" href="freetimemaker.github.io.apk" download="Android App.apk"> <h2>Download the Website as an Android App </h2> </a>
 </body>
