--- a/Programmieren/Radio/Install/index.html
+++ b/Programmieren/Radio/Install/index.html
@@ -57,6 +57,9 @@
             <a href="Windows.html"> <h2 class="Windows"> Windows </h2> </a>
         </div>
         <div class="c5">
+            <a href="Android.html"> <h2 class="Windows"> Android </h2> </a>
+        </div>
+        <div class="c5">
             <a href="Apps/index.html"> <h2 class="Install"> Install other Apps </h2> </a>
         </div>
         <div class="c5">
