--- a/Programmieren/Radio/Install/Apps/Minecraft/Java.html
+++ b/Programmieren/Radio/Install/Apps/Minecraft/Java.html
@@ -28,6 +28,7 @@
         <a class="Home" href="index.html"> Home </a>
         <a class="Mods" href="Mods.html"> Mods </a>
         <a class="Packs" href="Packs.html"> Modpacks </a>
+        <a class="Maps" href="Maps.html"> Maps </a>
         <a class="Other" href="Other.html"> Other Files </a>
     </div>
 </body>
