--- a/Programmieren/Radio/Install/Apps/Minecraft/Mods.html
+++ b/Programmieren/Radio/Install/Apps/Minecraft/Mods.html
@@ -26,5 +26,7 @@
 <body>
     <div class="nav">
         <a class="Home" href="index.html"> Home </a>
+        <a class="CurseForge" href="CurseForgeJava.html"> CurseForge Mods </a>
+        <a class="Download" href="DownloadJava.html"> Download Mods </a>
     </div>
 </body>
