--- a/Programmieren/Radio/Install/Apps/Minecraft/Java.html
+++ b/Programmieren/Radio/Install/Apps/Minecraft/Java.html
@@ -25,6 +25,7 @@
 <body>
     <div class="nav">
         <a class="Home" href="index.html"> Home </a>
+        <a class="Resource" href="Resource.html"> Resource Packs </a>
         <a class="Mods" href="Mods.html"> Mods </a>
         <a class="Packs" href="Packs.html"> Modpacks </a>
         <a class="Maps" href="Maps.html"> Maps </a>
