--- a/Maps/Maps.html
+++ b/Maps/Maps.html
@@ -1,5 +1,5 @@
 <head>
-    <link rel="stylesheet" href="infos.css">
+    <link rel="stylesheet" href="Maps.css">
     <link rel="stylesheet" href="All.Pages.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
