--- a/Programmieren/Radio/Install/Apps/Minecraft/DownloadJavaMods.html
+++ b/Programmieren/Radio/Install/Apps/Minecraft/DownloadJavaMods.html
@@ -27,6 +27,7 @@
         <a class="Home" href="Java.html"> Home </a>
         <a class="Switzerland" href="SwitzerlandJava.html"> Switzerland </a>
         <a class="Phone" href="PhoneJava.html"> Phone </a>
-        <a class="Vampire" href="VampireJava"> Vampire </a>
+        <a class="Vampire" href="VampireJava.html"> Vampire </a>
+        <a class="Cat" href="CatJava.html"> Cat </a>
     </div>
 </body>
