--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <a href="infos.html"> <h2 class="Info"> Info </h2> </a>
         </div>
         <div class="c6">
-            <a href="quiz html"> <h2 class="Quiz"> Quiz </h2> </a>
+            <a href="quiz.html"> <h2 class="Quiz"> Quiz </h2> </a>
         </div>
         <div class="c6">
             <a href="media.html"> <h2 class="Media"> Media </h2> </a>
