--- a/Programmieren/Radio/Install/Apps/Minecraft/DownloadJavaMods.html
+++ b/Programmieren/Radio/Install/Apps/Minecraft/DownloadJavaMods.html
@@ -29,5 +29,9 @@
         <a class="Phone" href="PhoneJava.html"> Phone </a>
         <a class="Vampire" href="VampireJava.html"> Vampire </a>
         <a class="Cat" href="CatJava.html"> Cat </a>
+        <a class="Aphmau" href="AphmauJava.html"> Aphmau </a>
+        <a class="ICT" href="ICTJava.html"> ICT </a>
+        <a class="BMW" href="BMWJava.html"> BMW </a>
+        <a class="Volcano" href="VolcanoJava.html"> Volcano </a>
     </div>
 </body>
