--- a/Programmieren/Radio/Install/Apps/Minecraft/Mods.html
+++ b/Programmieren/Radio/Install/Apps/Minecraft/Mods.html
@@ -25,7 +25,7 @@
 <body>
     <div class="nav">
         <a class="Home" href="Java.html"> Home </a>
-        <a class="CurseForge" href="CurseForgeJavaMods.html"> CurseForge Mods </a>
+        <a class="CurseForge" href="CurseForgeJava.html"> CurseForge Mods </a>
         <a class="Download" href="DownloadJavaMods.html"> Download Mods </a>
     </div>
 </body>
