--- a/Programmieren/Radio/Install/Apps/Minecraft/DownloadJavaMods.html
+++ b/Programmieren/Radio/Install/Apps/Minecraft/DownloadJavaMods.html
@@ -24,7 +24,7 @@
 </head>
 <body>
     <div class="nav">
-        <a class="Home" href="Java.html"> Home </a>
+        <a class="Home" href="Mods.html"> Home </a>
         <a class="Switzerland" href="SwitzerlandJava.html"> Switzerland </a>
         <a class="Phone" href="PhoneJava.html"> Phone </a>
         <a class="Vampire" href="VampireJava.html"> Vampire </a>
