--- a/Programmieren/Radio/Install/Apps/Minecraft/CurseForgeJava.html
+++ b/Programmieren/Radio/Install/Apps/Minecraft/CurseForgeJava.html
@@ -60,7 +60,7 @@
 </head>
 <body>
     <div class="nav">
-        <a class="Home" href="Java.html"> Home </a>
+        <a class="Home" href="Mods.html"> Home </a>
         <a class="Switzerland" href="CurseSwitzerlandJava.html"> Switzerland </a>
         <a class="Phone" href="CursePhoneJava.html"> Phone </a>
         <a class="Vampire" href="CurseVampireJava.html"> Vampire </a>
