--- a/Programmieren/Radio/Install/Apps/Minecraft/CurseSwitzerlandJava.html
+++ b/Programmieren/Radio/Install/Apps/Minecraft/CurseSwitzerlandJava.html
@@ -24,14 +24,7 @@
 </head>
 <body>
     <div class="nav">
-        <a class="Home" href="Mods.html"> Home </a>
-        <a class="Switzerland" href="CurseSwitzerlandJava.html"> Switzerland </a>
-        <a class="Phone" href="CursePhoneJava.html"> Phone </a>
-        <a class="Vampire" href="CurseVampireJava.html"> Vampire </a>
-        <a class="Cat" href="CurseCatJava.html"> Cat </a>
-        <a class="Aphmau" href="CurseAphmauJava.html"> Aphmau </a>
-        <a class="ICT" href="CurseICTJava.html"> ICT </a>
-        <a class="BMW" href="CurseBMWJava.html"> BMW </a>
-        <a class="Volcano" href="CurseVolcanoJava.html"> Volcano </a>
+        <a class="Home" href="CurseForgeJava.html"> Home </a>
     </div>
+    <a class="Download" href="https://www.curseforge.com/minecraft/mc-mods/freetime-maker-s-switzerland"> <h2> Download via CurseForge </h2> </a>
 </body>
