--- a/Programmieren/Radio/Install/Apps/Minecraft/CurseVampireJava.html
+++ b/Programmieren/Radio/Install/Apps/Minecraft/CurseVampireJava.html
@@ -26,5 +26,5 @@
     <div class="nav">
         <a class="Home" href="CurseForgeJava.html"> Home </a>
     </div>
-    <a class="Download" href="https://www.curseforge.com/minecraft/mc-mods/freetime-maker-s-the-vampire-diaries"> <h2> Download via CurseForge </h2> </a>
+    <a class="Download" target="_blank" href="https://www.curseforge.com/minecraft/mc-mods/freetime-maker-s-the-vampire-diaries"> <h2> Download via CurseForge </h2> </a>
 </body>
