Added and Updated Pages

--- a/Programmieren/Radio/Install/Apps/Minecraft/1.19.4.SwitzerlandJava.html
+++ b/Programmieren/Radio/Install/Apps/Minecraft/1.19.4.SwitzerlandJava.html
@@ -1,4 +1,4 @@
-<head>
+<head></head>
     <link rel="stylesheet" href="All.Pages.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -24,7 +24,7 @@
 </head>
 <body>
     <div class="nav">
-        <a class="Home" href="CurseForgeJava.html"> Home </a>
+        <a class="Home" href="SwitzerlandJava.html"> Switzerland Java Mod </a>
     </div>
-    <a class="Download" target="_blank" href="https://www.curseforge.com/minecraft/mc-mods/freetime-maker-s-phone-mod"> <h2> Download via CurseForge </h2> </a>
+    <a class="Download" href="switzerland-1.0.0.jar" <h2> Download for Forge 1.19.4 </h2> </a>
 </body>
