--- a/Shop/index.html
+++ b/Shop/index.html
@@ -26,5 +26,7 @@
     <div class="r6">
         <u> <h1 class="Titel"> Shop of https://freetimemaker.github.io </h1> </u>   
     </div>
-    
+    <div class="nav">
+        <a href="RobloxShop.html"> Roblox Shop </a>
+    </div>
 </body>
