--- a/Shop/index.html
+++ b/Shop/index.html
@@ -27,6 +27,7 @@
         <u> <h1 class="Titel"> Shop of https://freetimemaker.github.io </h1> </u>   
     </div>
     <div class="nav">
+        <a class="Home" href="../index.html"> Home </a>
         <a class="Roblox" href="RobloxShop.html"> Roblox Shop </a>
         <a class="Minecraft" href="MinecraftShop.html"> Minecraft Shop </a>
     </div>
