--- a/Shop/RobloxShop.html
+++ b/Shop/RobloxShop.html
@@ -26,9 +26,20 @@
     <div class="r6">
         <u> <h1 class="Titel"> Roblox Shop </h1> </u>   
     </div>
-    <div class="nav">
-        <a class="Home" href="../index.html"> Home </a>
-        <a class="Roblox" href="RobloxShop.html"> Roblox Shop </a>
-        <a class="Minecraft" href="MinecraftShop.html"> Minecraft Shop </a>
+    <div class="r6>
+        <div class="nav">
+            <a class="Home" href="../index.html"> Home </a>
+            <a class="Roblox" href="RobloxShop.html"> Roblox Shop </a>
+            <a class="Minecraft" href="MinecraftShop.html"> Minecraft Shop </a>
+        </div>
+    </div>
+    <div class="r6">
+        <a class="Group">
+            <a href="FMPants.html"> Freetime Maker Pants </a>
+            <a href="MPFShirt.html"> Old-Fan Shirt </a>
+        </a>
+        <a class="Personal">
+            <a href="Shirts.html"> Shirts </a>
+        </a>
     </div>
 </body>
