--- a/Shop/FMPants.html
+++ b/Shop/FMPants.html
@@ -24,7 +24,7 @@
 </head>
 <body>
     <div class="r6">
-        <u> <h1 class="Titel"> Roblox Shop </h1> </u>   
+        <u> <h1 class="Titel"> Pants </h1> </u>   
     </div>
     <div class="r6">
       <a href="BuyFMPants.html"> Buy Pants </a>
