Added and Updated Pages

--- a/Programmieren/Radio/Install/Apps/Minecraft/1.19.1.SwitzerlandJava.html
+++ b/Programmieren/Radio/Install/Apps/Minecraft/1.19.1.SwitzerlandJava.html
@@ -26,5 +26,5 @@
     <div class="nav">
         <a class="Home" href="SwitzerlandJava.html"> Switzerland Java Mod </a>
     </div>
-    <a class="Download" href="switzerland-1.0.0.jar" <h2> Download for Forge 1.19.4 </h2> </a>
+    <a class="Download" href="Switzerland.jar" <h2> Download for Forge 1.19.4 </h2> </a>
 </body>
